src/Sintactico/y.output
   0  $accept : programa $end

   1  programa : conjunto_sentencias

   2  conjunto_sentencias : conj_sentencias_declarativas sentencias_ejecutables
   3                      | conj_sentencias_declarativas
   4                      | sentencias_ejecutables

   5  conj_sentencias_declarativas : sentencia_declarativa
   6                               | sentencia_declarativa conj_sentencias_declarativas

   7  sentencia_declarativa : tipo lista_de_variables ';'
   8                        | sentencia_de_clase

   9  lista_de_variables : lista_de_variables ',' variable
  10                     | variable

  11  variable : ID

  12  $$1 :

  13  sentencia_de_clase : CLASS ID $$1 definicion_clase

  14  $$2 :

  15  sentencia_de_clase : CLASS ID $$2 EXTENDS ID definicion_clase

  16  definicion_clase : BEGIN sentencias_clase END

  17  sentencias_clase : sentencias_clase cuerpo_clase
  18                   | cuerpo_clase

  19  cuerpo_clase : lista_atributos
  20               | metodo_clase

  21  lista_atributos : visibilidad sentencia_declarativa

  22  metodo_clase : visibilidad VOID ID '(' ')' bloque_anidado_metclase

  23  bloque_anidado_metclase : BEGIN bloque_sentencias END

  24  tipo : FLOAT
  25       | INT
  26       | ID

  27  visibilidad : PUBLIC
  28              | PRIVATE

  29  sentencias_ejecutables : BEGIN bloque_sentencias END ';'
  30                         | error bloque_sentencias END ';'
  31                         | BEGIN bloque_sentencias error ';'
  32                         | BEGIN bloque_sentencias END error

  33  bloque_sentencias : bloque_sentencias sentencia
  34                    | sentencia

  35  sentencia : ejecucion

  36  ejecucion : iteracion
  37            | seleccion
  38            | print
  39            | asig
  40            | invocacion_metodo_clase

  41  invocacion_metodo_clase : ID '.' ID '(' ')' ';'
  42                          | error_inv_metodo_clase

  43  error_inv_metodo_clase : error '.' ID '(' ')' ';'
  44                         | ID '.' error '(' ')' ';'
  45                         | ID '.' error ')' ';'
  46                         | ID '.' ID '(' error ';'
  47                         | ID '.' ID '(' ')' error

  48  print : PRINT '(' CADENA ')' ';'
  49        | error_print

  50  error_print : PRINT error CADENA ')' ';'
  51              | PRINT '(' CADENA error ';'
  52              | PRINT '(' CADENA ')' error

  53  iteracion : WHILE '(' condicion ')' DO bloque_anidado
  54            | WHILE condicion ')' DO bloque_anidado
  55            | WHILE '(' condicion DO bloque_anidado
  56            | WHILE '(' condicion ')' bloque_anidado

  57  condicion : expresion comparador expresion
  58            | comparador expresion
  59            | expresion comparador error

  60  comparador : '<'
  61             | '>'
  62             | '='
  63             | C_MAYORIGUAL
  64             | C_MENORIGUAL
  65             | C_DISTINTO
  66             | C_IGUAL

  67  seleccion : if_condicion END_IF
  68            | if_condicion ELSE bloque_anidado END_IF

  69  if_condicion : IF '(' condicion ')' bloque_anidado
  70               | IF condicion ')' bloque_anidado
  71               | IF '(' condicion bloque_anidado
  72               | IF condicion bloque_anidado

  73  bloque_anidado : sentencia
  74                 | BEGIN bloque_sentencias END
  75                 | BEGIN bloque_sentencias error
  76                 | error bloque_sentencias END

  77  asig : ID ASIGNACION expresion ';'
  78       | ID expresion ';'
  79       | error ASIGNACION expresion ';'
  80       | ID ASIGNACION expresion

  81  expresion : expresion '+' termino
  82            | expresion '-' termino
  83            | termino

  84  termino : termino '*' factor
  85          | termino '/' factor
  86          | factor

  87  factor : ID
  88         | ID '.' ID
  89         | cte

  90  cte : CTE
  91      | '-' CTE
  92      | CTEFLOAT
  93      | '-' CTEFLOAT

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	INT  shift 3
	BEGIN  shift 4
	CLASS  shift 5
	FLOAT  shift 6
	.  error

	programa  goto 7
	conjunto_sentencias  goto 8
	conj_sentencias_declarativas  goto 9
	sentencias_ejecutables  goto 10
	sentencia_declarativa  goto 11
	tipo  goto 12
	sentencia_de_clase  goto 13


state 1
	sentencias_ejecutables : error . bloque_sentencias END ';'  (30)

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 19
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 2
	tipo : ID .  (26)

	.  reduce 26


state 3
	tipo : INT .  (25)

	.  reduce 25


state 4
	sentencias_ejecutables : BEGIN . bloque_sentencias END ';'  (29)
	sentencias_ejecutables : BEGIN . bloque_sentencias error ';'  (31)
	sentencias_ejecutables : BEGIN . bloque_sentencias END error  (32)

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 30
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 5
	sentencia_de_clase : CLASS . ID $$1 definicion_clase  (13)
	sentencia_de_clase : CLASS . ID $$2 EXTENDS ID definicion_clase  (15)

	ID  shift 31
	.  error


state 6
	tipo : FLOAT .  (24)

	.  reduce 24


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : conjunto_sentencias .  (1)

	.  reduce 1


state 9
	conjunto_sentencias : conj_sentencias_declarativas . sentencias_ejecutables  (2)
	conjunto_sentencias : conj_sentencias_declarativas .  (3)

	error  shift 1
	BEGIN  shift 4
	$end  reduce 3

	sentencias_ejecutables  goto 32


state 10
	conjunto_sentencias : sentencias_ejecutables .  (4)

	.  reduce 4


state 11
	conj_sentencias_declarativas : sentencia_declarativa .  (5)
	conj_sentencias_declarativas : sentencia_declarativa . conj_sentencias_declarativas  (6)

	ID  shift 2
	INT  shift 3
	CLASS  shift 5
	FLOAT  shift 6
	$end  reduce 5
	error  reduce 5
	BEGIN  reduce 5

	conj_sentencias_declarativas  goto 33
	sentencia_declarativa  goto 11
	tipo  goto 12
	sentencia_de_clase  goto 13


state 12
	sentencia_declarativa : tipo . lista_de_variables ';'  (7)

	ID  shift 34
	.  error

	lista_de_variables  goto 35
	variable  goto 36


state 13
	sentencia_declarativa : sentencia_de_clase .  (8)

	.  reduce 8


state 14
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (43)
	asig : error . ASIGNACION expresion ';'  (79)

	ASIGNACION  shift 37
	'.'  shift 38
	.  error


state 15
	invocacion_metodo_clase : ID . '.' ID '(' ')' ';'  (41)
	error_inv_metodo_clase : ID . '.' error '(' ')' ';'  (44)
	error_inv_metodo_clase : ID . '.' error ')' ';'  (45)
	error_inv_metodo_clase : ID . '.' ID '(' error ';'  (46)
	error_inv_metodo_clase : ID . '.' ID '(' ')' error  (47)
	asig : ID . ASIGNACION expresion ';'  (77)
	asig : ID . expresion ';'  (78)
	asig : ID . ASIGNACION expresion  (80)

	ID  shift 39
	CTE  shift 40
	ASIGNACION  shift 41
	CTEFLOAT  shift 42
	'.'  shift 43
	'-'  shift 44
	.  error

	expresion  goto 45
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 16
	if_condicion : IF . '(' condicion ')' bloque_anidado  (69)
	if_condicion : IF . condicion ')' bloque_anidado  (70)
	if_condicion : IF . '(' condicion bloque_anidado  (71)
	if_condicion : IF . condicion bloque_anidado  (72)

	ID  shift 39
	CTE  shift 40
	C_MAYORIGUAL  shift 49
	C_MENORIGUAL  shift 50
	C_DISTINTO  shift 51
	C_IGUAL  shift 52
	CTEFLOAT  shift 42
	'('  shift 53
	'<'  shift 54
	'>'  shift 55
	'='  shift 56
	'-'  shift 44
	.  error

	condicion  goto 57
	expresion  goto 58
	comparador  goto 59
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 17
	print : PRINT . '(' CADENA ')' ';'  (48)
	error_print : PRINT . error CADENA ')' ';'  (50)
	error_print : PRINT . '(' CADENA error ';'  (51)
	error_print : PRINT . '(' CADENA ')' error  (52)

	error  shift 60
	'('  shift 61
	.  error


state 18
	iteracion : WHILE . '(' condicion ')' DO bloque_anidado  (53)
	iteracion : WHILE . condicion ')' DO bloque_anidado  (54)
	iteracion : WHILE . '(' condicion DO bloque_anidado  (55)
	iteracion : WHILE . '(' condicion ')' bloque_anidado  (56)

	ID  shift 39
	CTE  shift 40
	C_MAYORIGUAL  shift 49
	C_MENORIGUAL  shift 50
	C_DISTINTO  shift 51
	C_IGUAL  shift 52
	CTEFLOAT  shift 42
	'('  shift 62
	'<'  shift 54
	'>'  shift 55
	'='  shift 56
	'-'  shift 44
	.  error

	condicion  goto 63
	expresion  goto 58
	comparador  goto 59
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 19
	sentencias_ejecutables : error bloque_sentencias . END ';'  (30)
	bloque_sentencias : bloque_sentencias . sentencia  (33)

	error  shift 14
	ID  shift 15
	IF  shift 16
	END  shift 64
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 65
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 20
	bloque_sentencias : sentencia .  (34)

	.  reduce 34


state 21
	sentencia : ejecucion .  (35)

	.  reduce 35


state 22
	ejecucion : iteracion .  (36)

	.  reduce 36


state 23
	ejecucion : seleccion .  (37)

	.  reduce 37


state 24
	ejecucion : print .  (38)

	.  reduce 38


state 25
	ejecucion : asig .  (39)

	.  reduce 39


state 26
	ejecucion : invocacion_metodo_clase .  (40)

	.  reduce 40


state 27
	invocacion_metodo_clase : error_inv_metodo_clase .  (42)

	.  reduce 42


state 28
	print : error_print .  (49)

	.  reduce 49


state 29
	seleccion : if_condicion . END_IF  (67)
	seleccion : if_condicion . ELSE bloque_anidado END_IF  (68)

	ELSE  shift 66
	END_IF  shift 67
	.  error


state 30
	sentencias_ejecutables : BEGIN bloque_sentencias . END ';'  (29)
	sentencias_ejecutables : BEGIN bloque_sentencias . error ';'  (31)
	sentencias_ejecutables : BEGIN bloque_sentencias . END error  (32)
	bloque_sentencias : bloque_sentencias . sentencia  (33)

	error  shift 68
	ID  shift 15
	IF  shift 16
	END  shift 69
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 65
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 31
	sentencia_de_clase : CLASS ID . $$1 definicion_clase  (13)
	sentencia_de_clase : CLASS ID . $$2 EXTENDS ID definicion_clase  (15)
	$$1 : .  (12)
	$$2 : .  (14)

	BEGIN  reduce 12
	EXTENDS  reduce 14

	$$1  goto 70
	$$2  goto 71


state 32
	conjunto_sentencias : conj_sentencias_declarativas sentencias_ejecutables .  (2)

	.  reduce 2


state 33
	conj_sentencias_declarativas : sentencia_declarativa conj_sentencias_declarativas .  (6)

	.  reduce 6


state 34
	variable : ID .  (11)

	.  reduce 11


state 35
	sentencia_declarativa : tipo lista_de_variables . ';'  (7)
	lista_de_variables : lista_de_variables . ',' variable  (9)

	';'  shift 72
	','  shift 73
	.  error


state 36
	lista_de_variables : variable .  (10)

	.  reduce 10


state 37
	asig : error ASIGNACION . expresion ';'  (79)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	expresion  goto 74
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 38
	error_inv_metodo_clase : error '.' . ID '(' ')' ';'  (43)

	ID  shift 75
	.  error


state 39
	factor : ID .  (87)
	factor : ID . '.' ID  (88)

	'.'  shift 76
	error  reduce 87
	ID  reduce 87
	C_MAYORIGUAL  reduce 87
	C_MENORIGUAL  reduce 87
	C_DISTINTO  reduce 87
	IF  reduce 87
	ELSE  reduce 87
	END_IF  reduce 87
	BEGIN  reduce 87
	END  reduce 87
	PRINT  reduce 87
	WHILE  reduce 87
	DO  reduce 87
	C_IGUAL  reduce 87
	';'  reduce 87
	')'  reduce 87
	'<'  reduce 87
	'>'  reduce 87
	'='  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87


state 40
	cte : CTE .  (90)

	.  reduce 90


state 41
	asig : ID ASIGNACION . expresion ';'  (77)
	asig : ID ASIGNACION . expresion  (80)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	expresion  goto 77
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 42
	cte : CTEFLOAT .  (92)

	.  reduce 92


state 43
	invocacion_metodo_clase : ID '.' . ID '(' ')' ';'  (41)
	error_inv_metodo_clase : ID '.' . error '(' ')' ';'  (44)
	error_inv_metodo_clase : ID '.' . error ')' ';'  (45)
	error_inv_metodo_clase : ID '.' . ID '(' error ';'  (46)
	error_inv_metodo_clase : ID '.' . ID '(' ')' error  (47)

	error  shift 78
	ID  shift 79
	.  error


state 44
	cte : '-' . CTE  (91)
	cte : '-' . CTEFLOAT  (93)

	CTE  shift 80
	CTEFLOAT  shift 81
	.  error


state 45
	asig : ID expresion . ';'  (78)
	expresion : expresion . '+' termino  (81)
	expresion : expresion . '-' termino  (82)

	';'  shift 82
	'+'  shift 83
	'-'  shift 84
	.  error


state 46
	expresion : termino .  (83)
	termino : termino . '*' factor  (84)
	termino : termino . '/' factor  (85)

	'*'  shift 85
	'/'  shift 86
	error  reduce 83
	ID  reduce 83
	C_MAYORIGUAL  reduce 83
	C_MENORIGUAL  reduce 83
	C_DISTINTO  reduce 83
	IF  reduce 83
	ELSE  reduce 83
	END_IF  reduce 83
	BEGIN  reduce 83
	END  reduce 83
	PRINT  reduce 83
	WHILE  reduce 83
	DO  reduce 83
	C_IGUAL  reduce 83
	';'  reduce 83
	')'  reduce 83
	'<'  reduce 83
	'>'  reduce 83
	'='  reduce 83
	'+'  reduce 83
	'-'  reduce 83


state 47
	termino : factor .  (86)

	.  reduce 86


state 48
	factor : cte .  (89)

	.  reduce 89


state 49
	comparador : C_MAYORIGUAL .  (63)

	.  reduce 63


state 50
	comparador : C_MENORIGUAL .  (64)

	.  reduce 64


state 51
	comparador : C_DISTINTO .  (65)

	.  reduce 65


state 52
	comparador : C_IGUAL .  (66)

	.  reduce 66


state 53
	if_condicion : IF '(' . condicion ')' bloque_anidado  (69)
	if_condicion : IF '(' . condicion bloque_anidado  (71)

	ID  shift 39
	CTE  shift 40
	C_MAYORIGUAL  shift 49
	C_MENORIGUAL  shift 50
	C_DISTINTO  shift 51
	C_IGUAL  shift 52
	CTEFLOAT  shift 42
	'<'  shift 54
	'>'  shift 55
	'='  shift 56
	'-'  shift 44
	.  error

	condicion  goto 87
	expresion  goto 58
	comparador  goto 59
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 54
	comparador : '<' .  (60)

	.  reduce 60


state 55
	comparador : '>' .  (61)

	.  reduce 61


state 56
	comparador : '=' .  (62)

	.  reduce 62


state 57
	if_condicion : IF condicion . ')' bloque_anidado  (70)
	if_condicion : IF condicion . bloque_anidado  (72)

	error  shift 88
	ID  shift 15
	IF  shift 16
	BEGIN  shift 89
	PRINT  shift 17
	WHILE  shift 18
	')'  shift 90
	.  error

	sentencia  goto 91
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	bloque_anidado  goto 92
	if_condicion  goto 29


state 58
	condicion : expresion . comparador expresion  (57)
	condicion : expresion . comparador error  (59)
	expresion : expresion . '+' termino  (81)
	expresion : expresion . '-' termino  (82)

	C_MAYORIGUAL  shift 49
	C_MENORIGUAL  shift 50
	C_DISTINTO  shift 51
	C_IGUAL  shift 52
	'<'  shift 54
	'>'  shift 55
	'='  shift 56
	'+'  shift 83
	'-'  shift 84
	.  error

	comparador  goto 93


state 59
	condicion : comparador . expresion  (58)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	expresion  goto 94
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 60
	error_print : PRINT error . CADENA ')' ';'  (50)

	CADENA  shift 95
	.  error


state 61
	print : PRINT '(' . CADENA ')' ';'  (48)
	error_print : PRINT '(' . CADENA error ';'  (51)
	error_print : PRINT '(' . CADENA ')' error  (52)

	CADENA  shift 96
	.  error


state 62
	iteracion : WHILE '(' . condicion ')' DO bloque_anidado  (53)
	iteracion : WHILE '(' . condicion DO bloque_anidado  (55)
	iteracion : WHILE '(' . condicion ')' bloque_anidado  (56)

	ID  shift 39
	CTE  shift 40
	C_MAYORIGUAL  shift 49
	C_MENORIGUAL  shift 50
	C_DISTINTO  shift 51
	C_IGUAL  shift 52
	CTEFLOAT  shift 42
	'<'  shift 54
	'>'  shift 55
	'='  shift 56
	'-'  shift 44
	.  error

	condicion  goto 97
	expresion  goto 58
	comparador  goto 59
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 63
	iteracion : WHILE condicion . ')' DO bloque_anidado  (54)

	')'  shift 98
	.  error


state 64
	sentencias_ejecutables : error bloque_sentencias END . ';'  (30)

	';'  shift 99
	.  error


state 65
	bloque_sentencias : bloque_sentencias sentencia .  (33)

	.  reduce 33


state 66
	seleccion : if_condicion ELSE . bloque_anidado END_IF  (68)

	error  shift 88
	ID  shift 15
	IF  shift 16
	BEGIN  shift 89
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 91
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	bloque_anidado  goto 100
	if_condicion  goto 29


state 67
	seleccion : if_condicion END_IF .  (67)

	.  reduce 67


state 68
	sentencias_ejecutables : BEGIN bloque_sentencias error . ';'  (31)
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (43)
	asig : error . ASIGNACION expresion ';'  (79)

	ASIGNACION  shift 37
	';'  shift 101
	'.'  shift 38
	.  error


state 69
	sentencias_ejecutables : BEGIN bloque_sentencias END . ';'  (29)
	sentencias_ejecutables : BEGIN bloque_sentencias END . error  (32)

	error  shift 102
	';'  shift 103
	.  error


state 70
	sentencia_de_clase : CLASS ID $$1 . definicion_clase  (13)

	BEGIN  shift 104
	.  error

	definicion_clase  goto 105


state 71
	sentencia_de_clase : CLASS ID $$2 . EXTENDS ID definicion_clase  (15)

	EXTENDS  shift 106
	.  error


state 72
	sentencia_declarativa : tipo lista_de_variables ';' .  (7)

	.  reduce 7


state 73
	lista_de_variables : lista_de_variables ',' . variable  (9)

	ID  shift 34
	.  error

	variable  goto 107


state 74
	asig : error ASIGNACION expresion . ';'  (79)
	expresion : expresion . '+' termino  (81)
	expresion : expresion . '-' termino  (82)

	';'  shift 108
	'+'  shift 83
	'-'  shift 84
	.  error


state 75
	error_inv_metodo_clase : error '.' ID . '(' ')' ';'  (43)

	'('  shift 109
	.  error


state 76
	factor : ID '.' . ID  (88)

	ID  shift 110
	.  error


state 77
	asig : ID ASIGNACION expresion . ';'  (77)
	asig : ID ASIGNACION expresion .  (80)
	expresion : expresion . '+' termino  (81)
	expresion : expresion . '-' termino  (82)

	';'  shift 111
	'+'  shift 83
	'-'  shift 84
	error  reduce 80
	ID  reduce 80
	IF  reduce 80
	ELSE  reduce 80
	END_IF  reduce 80
	END  reduce 80
	PRINT  reduce 80
	WHILE  reduce 80


state 78
	error_inv_metodo_clase : ID '.' error . '(' ')' ';'  (44)
	error_inv_metodo_clase : ID '.' error . ')' ';'  (45)

	'('  shift 112
	')'  shift 113
	.  error


state 79
	invocacion_metodo_clase : ID '.' ID . '(' ')' ';'  (41)
	error_inv_metodo_clase : ID '.' ID . '(' error ';'  (46)
	error_inv_metodo_clase : ID '.' ID . '(' ')' error  (47)

	'('  shift 114
	.  error


state 80
	cte : '-' CTE .  (91)

	.  reduce 91


state 81
	cte : '-' CTEFLOAT .  (93)

	.  reduce 93


state 82
	asig : ID expresion ';' .  (78)

	.  reduce 78


state 83
	expresion : expresion '+' . termino  (81)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	termino  goto 115
	factor  goto 47
	cte  goto 48


state 84
	expresion : expresion '-' . termino  (82)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	termino  goto 116
	factor  goto 47
	cte  goto 48


state 85
	termino : termino '*' . factor  (84)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	factor  goto 117
	cte  goto 48


state 86
	termino : termino '/' . factor  (85)

	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	factor  goto 118
	cte  goto 48


state 87
	if_condicion : IF '(' condicion . ')' bloque_anidado  (69)
	if_condicion : IF '(' condicion . bloque_anidado  (71)

	error  shift 88
	ID  shift 15
	IF  shift 16
	BEGIN  shift 89
	PRINT  shift 17
	WHILE  shift 18
	')'  shift 119
	.  error

	sentencia  goto 91
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	bloque_anidado  goto 120
	if_condicion  goto 29


state 88
	error_inv_metodo_clase : error . '.' ID '(' ')' ';'  (43)
	bloque_anidado : error . bloque_sentencias END  (76)
	asig : error . ASIGNACION expresion ';'  (79)

	error  shift 14
	ID  shift 15
	ASIGNACION  shift 37
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	'.'  shift 38
	.  error

	bloque_sentencias  goto 121
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 89
	bloque_anidado : BEGIN . bloque_sentencias END  (74)
	bloque_anidado : BEGIN . bloque_sentencias error  (75)

	error  shift 14
	ID  shift 15
	IF  shift 16
	PRINT  shift 17
	WHILE  shift 18
	.  error

	bloque_sentencias  goto 122
	sentencia  goto 20
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 90
	if_condicion : IF condicion ')' . bloque_anidado  (70)

	error  shift 88
	ID  shift 15
	IF  shift 16
	BEGIN  shift 89
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 91
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	bloque_anidado  goto 123
	if_condicion  goto 29


state 91
	bloque_anidado : sentencia .  (73)

	.  reduce 73


state 92
	if_condicion : IF condicion bloque_anidado .  (72)

	.  reduce 72


state 93
	condicion : expresion comparador . expresion  (57)
	condicion : expresion comparador . error  (59)

	error  shift 124
	ID  shift 39
	CTE  shift 40
	CTEFLOAT  shift 42
	'-'  shift 44
	.  error

	expresion  goto 125
	termino  goto 46
	factor  goto 47
	cte  goto 48


state 94
	condicion : comparador expresion .  (58)
	expresion : expresion . '+' termino  (81)
	expresion : expresion . '-' termino  (82)

	'+'  shift 83
	'-'  shift 84
	error  reduce 58
	ID  reduce 58
	IF  reduce 58
	BEGIN  reduce 58
	PRINT  reduce 58
	WHILE  reduce 58
	DO  reduce 58
	')'  reduce 58


state 95
	error_print : PRINT error CADENA . ')' ';'  (50)

	')'  shift 126
	.  error


state 96
	print : PRINT '(' CADENA . ')' ';'  (48)
	error_print : PRINT '(' CADENA . error ';'  (51)
	error_print : PRINT '(' CADENA . ')' error  (52)

	error  shift 127
	')'  shift 128
	.  error


state 97
	iteracion : WHILE '(' condicion . ')' DO bloque_anidado  (53)
	iteracion : WHILE '(' condicion . DO bloque_anidado  (55)
	iteracion : WHILE '(' condicion . ')' bloque_anidado  (56)

	DO  shift 129
	')'  shift 130
	.  error


state 98
	iteracion : WHILE condicion ')' . DO bloque_anidado  (54)

	DO  shift 131
	.  error


state 99
	sentencias_ejecutables : error bloque_sentencias END ';' .  (30)

	.  reduce 30


state 100
	seleccion : if_condicion ELSE bloque_anidado . END_IF  (68)

	END_IF  shift 132
	.  error


state 101
	sentencias_ejecutables : BEGIN bloque_sentencias error ';' .  (31)

	.  reduce 31


state 102
	sentencias_ejecutables : BEGIN bloque_sentencias END error .  (32)

	.  reduce 32


state 103
	sentencias_ejecutables : BEGIN bloque_sentencias END ';' .  (29)

	.  reduce 29


state 104
	definicion_clase : BEGIN . sentencias_clase END  (16)

	PUBLIC  shift 133
	PRIVATE  shift 134
	.  error

	sentencias_clase  goto 135
	cuerpo_clase  goto 136
	lista_atributos  goto 137
	metodo_clase  goto 138
	visibilidad  goto 139


state 105
	sentencia_de_clase : CLASS ID $$1 definicion_clase .  (13)

	.  reduce 13


state 106
	sentencia_de_clase : CLASS ID $$2 EXTENDS . ID definicion_clase  (15)

	ID  shift 140
	.  error


state 107
	lista_de_variables : lista_de_variables ',' variable .  (9)

	.  reduce 9


state 108
	asig : error ASIGNACION expresion ';' .  (79)

	.  reduce 79


state 109
	error_inv_metodo_clase : error '.' ID '(' . ')' ';'  (43)

	')'  shift 141
	.  error


state 110
	factor : ID '.' ID .  (88)

	.  reduce 88


state 111
	asig : ID ASIGNACION expresion ';' .  (77)

	.  reduce 77


state 112
	error_inv_metodo_clase : ID '.' error '(' . ')' ';'  (44)

	')'  shift 142
	.  error


state 113
	error_inv_metodo_clase : ID '.' error ')' . ';'  (45)

	';'  shift 143
	.  error


state 114
	invocacion_metodo_clase : ID '.' ID '(' . ')' ';'  (41)
	error_inv_metodo_clase : ID '.' ID '(' . error ';'  (46)
	error_inv_metodo_clase : ID '.' ID '(' . ')' error  (47)

	error  shift 144
	')'  shift 145
	.  error


state 115
	expresion : expresion '+' termino .  (81)
	termino : termino . '*' factor  (84)
	termino : termino . '/' factor  (85)

	'*'  shift 85
	'/'  shift 86
	error  reduce 81
	ID  reduce 81
	C_MAYORIGUAL  reduce 81
	C_MENORIGUAL  reduce 81
	C_DISTINTO  reduce 81
	IF  reduce 81
	ELSE  reduce 81
	END_IF  reduce 81
	BEGIN  reduce 81
	END  reduce 81
	PRINT  reduce 81
	WHILE  reduce 81
	DO  reduce 81
	C_IGUAL  reduce 81
	';'  reduce 81
	')'  reduce 81
	'<'  reduce 81
	'>'  reduce 81
	'='  reduce 81
	'+'  reduce 81
	'-'  reduce 81


state 116
	expresion : expresion '-' termino .  (82)
	termino : termino . '*' factor  (84)
	termino : termino . '/' factor  (85)

	'*'  shift 85
	'/'  shift 86
	error  reduce 82
	ID  reduce 82
	C_MAYORIGUAL  reduce 82
	C_MENORIGUAL  reduce 82
	C_DISTINTO  reduce 82
	IF  reduce 82
	ELSE  reduce 82
	END_IF  reduce 82
	BEGIN  reduce 82
	END  reduce 82
	PRINT  reduce 82
	WHILE  reduce 82
	DO  reduce 82
	C_IGUAL  reduce 82
	';'  reduce 82
	')'  reduce 82
	'<'  reduce 82
	'>'  reduce 82
	'='  reduce 82
	'+'  reduce 82
	'-'  reduce 82


state 117
	termino : termino '*' factor .  (84)

	.  reduce 84


state 118
	termino : termino '/' factor .  (85)

	.  reduce 85


state 119
	if_condicion : IF '(' condicion ')' . bloque_anidado  (69)

	error  shift 88
	ID  shift 15
	IF  shift 16
	BEGIN  shift 89
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 91
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	bloque_anidado  goto 146
	if_condicion  goto 29


state 120
	if_condicion : IF '(' condicion bloque_anidado .  (71)

	.  reduce 71


state 121
	bloque_sentencias : bloque_sentencias . sentencia  (33)
	bloque_anidado : error bloque_sentencias . END  (76)

	error  shift 14
	ID  shift 15
	IF  shift 16
	END  shift 147
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 65
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 122
	bloque_sentencias : bloque_sentencias . sentencia  (33)
	bloque_anidado : BEGIN bloque_sentencias . END  (74)
	bloque_anidado : BEGIN bloque_sentencias . error  (75)

	error  shift 148
	ID  shift 15
	IF  shift 16
	END  shift 149
	PRINT  shift 17
	WHILE  shift 18
	.  error

	sentencia  goto 65
	ejecucion  goto 21
	iteracion  goto 22
	seleccion  goto 23
	print  goto 24
	asig  goto 25
	invocacion_metodo_clase  goto 26
	error_inv_metodo_clase  goto 27
	error_print  goto 28
	if_condicion  goto 29


state 123
	if_condicion : IF condicion ')' bloque_anidado .  (70)

	.  reduce 70


state 124
	condicion : expresion comparador error .  (59)

